--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "form-serialize": "^0.7.2",
+    "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
+    "react-modal": "^3.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
